--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     // Dependency Management
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-architecture:$koin_version"
-
-    // AWS SDK
-    implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
-    implementation "com.amazonaws:aws-android-sdk-auth-core:$aws_version"
-    implementation "com.amazonaws:aws-android-sdk-translate:$aws_version"
-    implementation 'com.android.support:design:27.1.1'
 }
